# IPP-Trie-in-C

./: README.md
debug/: CMakeCache.txt  CTestTestfile.cmake  Doxyfile  Makefile  ala  cmake_install.cmake  conf.h  kupa  slownik
debug/dict-check/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dict-check
debug/dict-editor/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dict-editor
debug/dictionary/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dictionary_test  trie_test  word_list_test
debug/gtk-editor/: CTestTestfile.cmake  Makefile  cmake_install.cmake  editor
debug/vector/: CTestTestfile.cmake  Makefile  cmake_install.cmake  vector_test
src/: CMakeLists.txt  CMakeLists.txt.orig  conf.h.in
src/dict-check/: CMakeLists.txt  dict-check.c
src/dict-editor/: CMakeLists.txt  dict-editor.c
src/dictionary/: CMakeLists.txt  dictionary.c  dictionary.h  dictionary.h.orig  dictionary_test.c  rules_list.c  rules_list.h  trie.c  trie.h  trie_test.c  utils.h  word_list.c  word_list.h  word_list_test.c
src/gtk-editor/: CMakeLists.txt  editor.c  extra.c
src/vector/: CMakeLists.txt  vector.c  vector.h  vector_test.c
